tests/ui/opts/20_attr_on_field.stderr
error: #[funcmap] helper attribute is not supported for fields
 --> tests/ui/opts/20_attr_on_field.rs:4:16
  |
4 | struct Test<T>(#[funcmap] T);
  |                ^^^^^^^^^^
